--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,31 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header">This is header really?<i class="fal fa-user"></i></header>
+      <header class="header"> 
+        <div class="container"> 
+          <div class="header-top"><a class="header-logo" href="index.html">MoGo</a><i class="fa fa-bars header-toggle"></i>
+            <ul class="header-menu">
+              <li class="header-menu-item"><a class="header-menu-link" href="#">About</a></li>
+              <li class="header-menu-item"><a class="header-menu-link" href="#">Service</a></li>
+              <li class="header-menu-item"><a class="header-menu-link" href="#">Work</a></li>
+              <li class="header-menu-item"><a class="header-menu-link" href="#">Blog</a></li>
+              <li class="header-menu-item"><a class="header-menu-link" href="#">Contact</a></li>
+              <li class="header-menu-item"><a class="header-menu-icon" href="#"> <i class="fa fa-shopping-cart"></i></a></li>
+              <li class="header-menu-item"><a class="header-menu-icon" href="#"> <i class="fa fa-search"></i></a></li>
+            </ul>
+          </div>
+          <div class="header-content"> 
+            <h2 class="header-content-caption">Create Template</h2>
+            <h1 class="header-content-main">Welcome to mogo</h1><a class="header-content-more" href="#">Learn more</a>
+          </div>
+          <div class="header-bottom">
+            <div class="header-bottom-item is-active"> <span class="header-bottom-number">01</span><span class="header-bottom-text">Intro</span></div>
+            <div class="header-bottom-item"> <span class="header-bottom-number">02</span><span class="header-bottom-text">Work</span></div>
+            <div class="header-bottom-item"> <span class="header-bottom-number">03</span><span class="header-bottom-text">About</span></div>
+            <div class="header-bottom-item"> <span class="header-bottom-number">04</span><span class="header-bottom-text">Contacts</span></div>
+          </div>
+        </div>
+      </header>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
