--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,33 @@
             <h1 class="header-content-main">Welcome to mogo</h1><a class="header-content-more" href="#">Learn more</a>
           </div>
           <div class="header-bottom">
-            <div class="header-bottom-item is-active"> <span class="header-bottom-number">01</span><span class="header-bottom-text">Intro</span></div>
+            <div class="header-bottom-item"> <span class="header-bottom-number">01</span><span class="header-bottom-text">Intro</span></div>
             <div class="header-bottom-item"> <span class="header-bottom-number">02</span><span class="header-bottom-text">Work</span></div>
             <div class="header-bottom-item"> <span class="header-bottom-number">03</span><span class="header-bottom-text">About</span></div>
             <div class="header-bottom-item"> <span class="header-bottom-number">04</span><span class="header-bottom-text">Contacts</span></div>
           </div>
         </div>
       </header>
+      <section class="about"> 
+        <div class="container">
+          <div class="block-box">
+            <h3 class="block-box-caption">What we do</h3>
+            <h2 class="block-box-heading">Story about us</h2>
+            <p class="block-box-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste tempore ducimus aut minima ex. Eaque impedit, quasi sed cumque ex optio accusamus eius, quod obcaecati non delectus eos sequi laborum.</p>
+          </div>
+          <div class="about-list">	
+            <div class="about-item"> <img class="about-image" src="../images/img-about1.png" alt="">
+              <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
+            </div>
+            <div class="about-item"> <img class="about-image" src="../images/img-about2.png" alt="">
+              <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
+            </div>
+            <div class="about-item"> <img class="about-image" src="../images/img-about3.png" alt="">
+              <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
+            </div>
+          </div>
+        </div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
