--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,27 @@
           </div>
         </div>
       </section>
+      <section class="number"> 
+        <div class="container">
+          <div class="number-list">
+            <div class="number-item">
+              <h4 class="number-item-count">42</h4><span class="number-item-text">Web design project</span>
+            </div>
+            <div class="number-item">
+              <h4 class="number-item-count">123</h4><span class="number-item-text">Clients</span>
+            </div>
+            <div class="number-item">
+              <h4 class="number-item-count">15</h4><span class="number-item-text">Award winner</span>
+            </div>
+            <div class="number-item">
+              <h4 class="number-item-count">99</h4><span class="number-item-text">Cup of coffee</span>
+            </div>
+            <div class="number-item">
+              <h4 class="number-item-count">24</h4><span class="number-item-text">Members</span>
+            </div>
+          </div>
+        </div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
