--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Site</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&amp;family=Montserrat:wght@400;700&amp;family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&amp;family=Montserrat:wght@400;500;700&amp;family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/fontawesome.css">
     <link rel="stylesheet" href="./styles/styles.css">
@@ -76,6 +76,56 @@
             </div>
             <div class="number-item">
               <h4 class="number-item-count">24</h4><span class="number-item-text">Members</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="service">
+        <div class="container">
+          <div class="block-box">
+            <h3 class="block-box-caption">We work with</h3>
+            <h2 class="block-box-heading">Amazing Service</h2>
+          </div>
+          <div class="service-container">
+            <div class="service-list"> 
+              <div class="service-item"> <img class="service-item-icon" src="../images/amazing_icon1.png"/>
+                <div class="service-item-info">
+                  <h3 class="service-item-title">Photography</h3>
+                  <p class="service-item-desc">Lorem input dolor sit amet, consectetur adipiscing elit, set do eiusmod tempor.</p>
+                </div>
+              </div>
+              <div class="service-item"> <img class="service-item-icon" src="../images/amazing_icon2.png"/>
+                <div class="service-item-info">
+                  <h3 class="service-item-title">Web design</h3>
+                  <p class="service-item-desc">Lorem input dolor sit amet, consectetur adipiscing elit, set do eiusmod tempor.</p>
+                </div>
+              </div>
+              <div class="service-item"> <img class="service-item-icon" src="../images/amazing_icon3.png"/>
+                <div class="service-item-info">
+                  <h3 class="service-item-title">Creativity</h3>
+                  <p class="service-item-desc">Lorem input dolor sit amet, consectetur adipiscing elit, set do eiusmod tempor.</p>
+                </div>
+              </div>
+            </div>
+            <div class="service-list"> 
+              <div class="service-item"> <img class="service-item-icon" src="../images/amazing_icon4.png"/>
+                <div class="service-item-info">
+                  <h3 class="service-item-title">SEO</h3>
+                  <p class="service-item-desc">Lorem input dolor sit amet, consectetur adipiscing elit, set do eiusmod tempor.</p>
+                </div>
+              </div>
+              <div class="service-item"> <img class="service-item-icon" src="../images/amazing_icon5.png"/>
+                <div class="service-item-info">
+                  <h3 class="service-item-title">CSS/HTML</h3>
+                  <p class="service-item-desc">Lorem input dolor sit amet, consectetur adipiscing elit, set do eiusmod tempor.</p>
+                </div>
+              </div>
+              <div class="service-item"> <img class="service-item-icon" src="../images/amazing_icon6.png"/>
+                <div class="service-item-info">
+                  <h3 class="service-item-title">Digital</h3>
+                  <p class="service-item-desc">Lorem input dolor sit amet, consectetur adipiscing elit, set do eiusmod tempor.</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
