--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,16 @@
           </div>
         </div>
       </section>
+      <section class="device">
+        <div class="container">
+          <div class="block-box">
+            <h3 class="block-box-caption">For all devices</h3>
+            <h2 class="block-box-heading">Unique design</h2>
+          </div>
+          <div class="device-media"><img class="device-image" src="../images/img-devices.png"></div>
+        </div>
+      </section>
+      <section class="wedo">aaaaa</section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
