--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Site</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&amp;family=Montserrat:wght@400;500;700&amp;family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&amp;family=Montserrat:wght@400;500;700&amp;family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/fontawesome.css">
     <link rel="stylesheet" href="./styles/styles.css">
@@ -139,7 +139,43 @@
           <div class="device-media"><img class="device-image" src="../images/img-devices.png"></div>
         </div>
       </section>
-      <section class="wedo">aaaaa</section>
+      <section class="wedo">
+        <div class="container">
+          <div class="block-box">
+            <h3 class="block-box-caption">Service</h3>
+            <h2 class="block-box-heading">What we do</h2>
+            <p class="block-box-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat excepturi itaque repellendus. Aliquid voluptate similique voluptatibus? Vel assumenda optio molestias. Fuga, debitis totam harum a atque ut quia expedita veniam.</p>
+          </div>
+          <div class="wedo-container"><img class="wedo-image" src="../images/wedo-image.png">
+            <div class="wedo-content">
+              <div class="wedo-item is-active">
+                <div class="wedo-item-header"><img class="wedo-item-icon" src="../images/wedo-icon1.png"/>
+                  <h3 class="wedo-item-title">Photography</h3><i class="fa fa-angle-up wedo-item-arrow"></i>
+                </div>
+                <div class="wedo-item-content">
+                  <div class="wedo-item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa assumenda cum at in ipsum obcaecati sunt. Enim facilis optio vero pariatur, ipsum neque ea ipsam molestias recusandae magnam, vitae reprehenderit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis non est illum! Rerum, laboriosam nisi. Ab ea natus non officiis voluptates dolorum explicabo aliquid laudantium dolores, impedit sunt quia quo!</div>
+                </div>
+              </div>
+              <div class="wedo-item">
+                <div class="wedo-item-header"><img class="wedo-item-icon" src="../images/wedo-icon2.png"/>
+                  <h3 class="wedo-item-title">Creativity</h3><i class="fa fa-angle-up wedo-item-arrow"></i>
+                </div>
+                <div class="wedo-item-content">
+                  <div class="wedo-item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa assumenda cum at in ipsum obcaecati sunt. Enim facilis optio vero pariatur, ipsum neque ea ipsam molestias recusandae magnam, vitae reprehenderit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis non est illum! Rerum, laboriosam nisi. Ab ea natus non officiis voluptates dolorum explicabo aliquid laudantium dolores, impedit sunt quia quo!</div>
+                </div>
+              </div>
+              <div class="wedo-item">
+                <div class="wedo-item-header"><img class="wedo-item-icon" src="../images/wedo-icon3.png"/>
+                  <h3 class="wedo-item-title">Web Design</h3><i class="fa fa-angle-up wedo-item-arrow"></i>
+                </div>
+                <div class="wedo-item-content">
+                  <div class="wedo-item-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa assumenda cum at in ipsum obcaecati sunt. Enim facilis optio vero pariatur, ipsum neque ea ipsam molestias recusandae magnam, vitae reprehenderit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis non est illum! Rerum, laboriosam nisi. Ab ea natus non officiis voluptates dolorum explicabo aliquid laudantium dolores, impedit sunt quia quo!</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
