--- a/public/index.html
+++ b/public/index.html
@@ -176,6 +176,18 @@
           </div>
         </div>
       </section>
+      <section class="quote"> 
+        <div class="container"> 
+          <div class="quote-container"><i class="fa fa-angle-left quote-arrow quote-arrow-left"></i>
+            <div class="quote-content">
+              <div class="quote-icon"><img src="../images/img-quote.png"></div>
+              <div class="quote-info"> 
+                <p class="quote-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloremque a perspiciatis minus pariatur itaque voluptas illum delectus necessitatibus, tempora sapiente nobis cupiditate, ipsum fugiat quos, rem ea enim reiciendis!</p><span class="quote-author">Jon Doe</span>
+              </div>
+            </div><i class="fa fa-angle-right quote-arrow quote-arrow-right"></i>
+          </div>
+        </div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
