--- a/public/index.html
+++ b/public/index.html
@@ -188,6 +188,62 @@
           </div>
         </div>
       </section>
+      <section class="team">
+        <div class="container">
+          <div class="block-box">
+            <h3 class="block-box-caption">Who we are</h3>
+            <h2 class="block-box-heading">Meet our team</h2>
+            <p class="block-box-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque veniam libero optio. Atque necessitatibus voluptate explicabo suscipit excepturi numquam dignissimos corporis molestiae dolorum laudantium veritatis, voluptas aliquid perspiciatis expedita praesentium!</p>
+          </div>
+          <div class="team-list"> 
+            <div class="team-item"> 
+              <div class="team-main"><img class="team-image" src="./images/img-team1.png"/>
+                <div class="team-content">
+                  <ul class="team-social"> 
+                    <li class="team-social-item"><a class="team-social-link" href="#evondev"><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-pinterest"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-instagram"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="team-info">
+                <h3 class="team-name">Matthew Dix</h3><span class="team-position">Graphic Design</span>
+              </div>
+            </div>
+            <div class="team-item"> 
+              <div class="team-main"><img class="team-image" src="./images/img-team2.png"/>
+                <div class="team-content">
+                  <ul class="team-social"> 
+                    <li class="team-social-item"><a class="team-social-link" href="#chris"><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-pinterest"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-instagram"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="team-info">
+                <h3 class="team-name">Christopher Cambell</h3><span class="team-position">Branding UX/design</span>
+              </div>
+            </div>
+            <div class="team-item"> 
+              <div class="team-main"><img class="team-image" src="./images/img-team3.png"/>
+                <div class="team-content">
+                  <ul class="team-social"> 
+                    <li class="team-social-item"><a class="team-social-link" href="#hand"><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-pinterest"></i></a></li>
+                    <li class="team-social-item"><a class="team-social-link" href="#"><i class="fab fa-instagram"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="team-info">
+                <h3 class="team-name">Michael Fertig</h3><span class="team-position">Developer</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
