--- a/public/index.html
+++ b/public/index.html
@@ -244,6 +244,9 @@
           </div>
         </div>
       </section>
+      <section class="brand"> 
+        <div class="container"> <img src="../images/img-logos.png" alt="brands"></div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
