--- a/public/index.html
+++ b/public/index.html
@@ -247,6 +247,52 @@
       <section class="brand"> 
         <div class="container"> <img src="../images/img-logos.png" alt="brands"></div>
       </section>
+      <section class="work"> 
+        <div class="container"> 
+          <div class="block-box">
+            <h3 class="block-box-caption">What we do</h3>
+            <h2 class="block-box-heading">Some of our work</h2>
+            <p class="block-box-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ratione accusantium repellat ipsa veniam facilis rerum distinctio saepe, nesciunt unde omnis in magni eaque doloremque eligendi hic aperiam tempore sunt!</p>
+          </div>
+        </div>
+        <div class="work-grid"> 
+          <div class="work-item"><img class="work-image" src="../images/img-work1.png"/>
+            <div class="work-content"> <i class="work-icon fa fa-home"></i>
+              <h3 class="work-title">Creatively designed</h3><span class="work-desc text text--light">Lorem ipsum dolor sit</span>
+            </div>
+          </div>
+          <div class="work-item"><img class="work-image" src="../images/img-work2.png"/>
+            <div class="work-content"> <i class="work-icon fa fa-cog"></i>
+              <h3 class="work-title">Creatively designed</h3><span class="work-desc text text--light">Lorem ipsum dolor sit</span>
+            </div>
+          </div>
+          <div class="work-item"><img class="work-image" src="./images/img-work3.png"/>
+            <div class="work-content"> <i class="work-icon fa fa-cog"></i>
+              <h3 class="work-title">Frontend Developer</h3><span class="work-desc text text--light">Lorem ipsum dolor sit</span>
+            </div>
+          </div>
+          <div class="work-item"><img class="work-image" src="./images/img-work4.png"/>
+            <div class="work-content"> <i class="work-icon fa fa-home"></i>
+              <h3 class="work-title">Creatively designed</h3><span class="work-desc text text--light">Lorem ipsum dolor sit</span>
+            </div>
+          </div>
+          <div class="work-item work-item--full"><img class="work-image" src="./images/img-work5.png"/>
+            <div class="work-content"> <i class="work-icon fa fa-heart"></i>
+              <h3 class="work-title">Super heart</h3><span class="work-desc text text--light">Lorem ipsum dolor sit</span>
+            </div>
+          </div>
+          <div class="work-item"><img class="work-image" src="./images/img-work6.png"/>
+            <div class="work-content"> <i class="work-icon fa fa-home"></i>
+              <h3 class="work-title">Creatively designed</h3><span class="work-desc text text--light">Lorem ipsum dolor sit</span>
+            </div>
+          </div>
+          <div class="work-item"><img class="work-image" src="./images/img-work7.png"/>
+            <div class="work-content"> <i class="work-icon fa fa-home"></i>
+              <h3 class="work-title">Creatively designed</h3><span class="work-desc text text--light">Lorem ipsum dolor sit</span>
+            </div>
+          </div>
+        </div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
