--- a/public/index.html
+++ b/public/index.html
@@ -293,6 +293,40 @@
           </div>
         </div>
       </section>
+      <section class="people">
+        <div class="container">
+          <div class="block-box">
+            <h3 class="block-box-caption">Happy clients</h3>
+            <h2 class="block-box-heading">What people say</h2>
+          </div>
+          <ul class="people-list">
+            <li class="people-item"><img class="people-avatar" src="./images/img-people1.png"/>
+              <div class="people-info">
+                <h3 class="people-name">Matthew Dix</h3><span class="people-job text text--light">Graphic Design</span>
+                <p class="people-desc text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus dignissimos quia pariatur quis modi doloremque consequatur facilis consequuntur. Fuga ea eius dignissimos porro animi, amet voluptatibus illo officiis eum numquam?</p>
+              </div>
+            </li>
+            <li class="people-item"><img class="people-avatar" src="./images/img-people2.png"/>
+              <div class="people-info">
+                <h3 class="people-name">Nick Karvounis</h3><span class="people-job text text--light">Graphic Design</span>
+                <p class="people-desc text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus dignissimos quia pariatur quis modi doloremque consequatur facilis consequuntur. Fuga ea eius dignissimos porro animi, amet voluptatibus illo officiis eum numquam?</p>
+              </div>
+            </li>
+            <li class="people-item"><img class="people-avatar" src="./images/img-people3.png"/>
+              <div class="people-info">
+                <h3 class="people-name">Jaelynn Castillo </h3><span class="people-job text text--light">Graphic Design</span>
+                <p class="people-desc text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus dignissimos quia pariatur quis modi doloremque consequatur facilis consequuntur. Fuga ea eius dignissimos porro animi, amet voluptatibus illo officiis eum numquam?</p>
+              </div>
+            </li>
+            <li class="people-item"><img class="people-avatar" src="./images/img-people4.png"/>
+              <div class="people-info">
+                <h3 class="people-name">Mike Petrucci</h3><span class="people-job text text--light">Graphic Design</span>
+                <p class="people-desc text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus dignissimos quia pariatur quis modi doloremque consequatur facilis consequuntur. Fuga ea eius dignissimos porro animi, amet voluptatibus illo officiis eum numquam?</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
