--- a/public/index.html
+++ b/public/index.html
@@ -327,6 +327,62 @@
           </ul>
         </div>
       </section>
+      <section class="story">
+        <div class="container">
+          <div class="block-box">
+            <h3 class="block-box-caption">Our stories</h3>
+            <h2 class="block-box-heading">Latest blog</h2>
+          </div>
+          <ul class="story-list"> 
+            <li class="story-item">
+              <div class="story-media"><img class="story-image" src="./images/img-blog1.png"/>
+                <div class="story-date"><span class="story-date-number">15</span><span class="story-date-text text text--light">Jan</span></div>
+              </div>
+              <h3 class="story-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+              <div class="story-desc text">
+                <p class="story-desc-inner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quidem nihil reprehenderit repudiandae aliquam, debitis magnam animi esse ipsam soluta non voluptas repellendus laboriosam totam sunt doloremque distinctio labore quas?</p>
+              </div>
+              <div class="story-meta">
+                <div class="story-meta-item"><i class="fa fa-eye story-meta-icon"></i><span class="story-meta-number text">1000</span></div>
+                <div class="story-meta-item"><i class="fa fa-comment story-meta-icon"></i><span class="story-meta-number text">100</span></div>
+              </div>
+            </li>
+            <li class="story-item">
+              <div class="story-media"><img class="story-image" src="./images/img-blog2.png"/>
+                <div class="story-date"><span class="story-date-number">15</span><span class="story-date-text text text--light">Jan</span></div>
+              </div>
+              <h3 class="story-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+              <div class="story-desc text">
+                <p class="story-desc-inner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quidem nihil reprehenderit repudiandae aliquam, debitis magnam animi esse ipsam soluta non voluptas repellendus laboriosam totam sunt doloremque distinctio labore quas?</p>
+              </div>
+              <div class="story-meta">
+                <div class="story-meta-item"><i class="fa fa-eye story-meta-icon"></i><span class="story-meta-number text">1000</span></div>
+                <div class="story-meta-item"><i class="fa fa-comment story-meta-icon"></i><span class="story-meta-number text">100</span></div>
+              </div>
+            </li>
+            <li class="story-item">
+              <div class="story-media"><img class="story-image" src="./images/img-blog3.png"/>
+                <div class="story-date"><span class="story-date-number">15</span><span class="story-date-text text text--light">Jan</span></div>
+              </div>
+              <h3 class="story-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+              <div class="story-desc text">
+                <p class="story-desc-inner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quidem nihil reprehenderit repudiandae aliquam, debitis magnam animi esse ipsam soluta non voluptas repellendus laboriosam totam sunt doloremque distinctio labore quas?</p>
+              </div>
+              <div class="story-meta">
+                <div class="story-meta-item"><i class="fa fa-eye story-meta-icon"></i><span class="story-meta-number text">1000</span></div>
+                <div class="story-meta-item"><i class="fa fa-comment story-meta-icon"></i><span class="story-meta-number text">100</span></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="map">
+        <div class="container">
+          <div class="map-content"><img class="map-icon" src="./images/img-map-icon.png">
+            <h2 class="map-heading">Open map</h2>
+          </div>
+        </div>
+      </section>
       <script src="./scripts/main.js"></script>
     </div>
   </body>
