--- a/public/index.html
+++ b/public/index.html
@@ -383,7 +383,51 @@
           </div>
         </div>
       </section>
-      <script src="./scripts/main.js"></script>
+      <footer class="footer">
+        <div class="container">
+          <div class="footer-top">
+            <div class="footer-column"><a class="footer-heading footer-heading--logo" href="index.html">MoGo</a>
+              <p class="footer-desc text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione a, magnam exercitationem ex earum ut ad animi. Voluptatum cupiditate optio rerum voluptates sunt, eos, nostrum suscipit molestiae quos accusantium possimus?</p>
+              <p class="footer-follower"><strong>15k</strong> followers</p>
+              <div class="footer-social"><span class="text">Follow Us:</span>
+                <div class="footer-social-list"><a class="footer-social-icon" href="#"><i class="fab fa-facebook"></i></a><a class="footer-social-icon" href="#"><i class="fab fa-twitter"></i></a><a class="footer-social-icon" href="#"><i class="fab fa-instagram"></i></a><a class="footer-social-icon" href="#"><i class="fab fa-pinterest"></i></a><a class="footer-social-icon" href="#"><i class="fab fa-youtube"></i></a><a class="footer-social-icon" href="#"><i class="fab fa-dribbble"></i></a><a class="footer-social-icon" href="#"><i class="fab fa-tumblr"></i></a><a class="footer-social-icon" href="#"><i class="fab fa-google-plus"></i></a></div>
+              </div>
+              <form class="footer-form" action="javascript:void(0)">
+                <input class="footer-form-input" type="email" placeholder="Your Email">
+                <button class="footer-form-button">Subscribe</button>
+              </form>
+            </div>
+            <div class="footer-column">
+              <h3 class="footer-heading">Blogs</h3><a class="footer-blog" href="#"><img class="footer-blog-image" src="./images/img-blogs1.png">
+                <div class="footer-blog-info">
+                  <h4 class="footer-blog-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4><span class="footer-blog-date text text--light">Jan 9, 2016</span>
+                </div></a><a class="footer-blog" href="#"><img class="footer-blog-image" src="./images/img-blogs2.png">
+                <div class="footer-blog-info">
+                  <h4 class="footer-blog-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4><span class="footer-blog-date text text--light">Jan 9, 2016</span>
+                </div></a><a class="footer-blog" href="#"><img class="footer-blog-image" src="./images/img-blogs3.png">
+                <div class="footer-blog-info">
+                  <h4 class="footer-blog-title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h4><span class="footer-blog-date text text--light">Jan 9, 2016</span>
+                </div></a>
+            </div>
+            <div class="footer-column">
+              <h3 class="footer-heading">Instagram</h3>
+              <div class="footer-images">
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+                <div class="footer-image"><img src="./images/img-instagram1.png"></div>
+              </div><a class="footer-images-more text text--light" href="#">View more photos</a>
+            </div>
+          </div>
+          <div class="footer-bottom">&copy; 2016 MoGo free PSD template by <span> Laaqiq</span></div>
+        </div>
+      </footer>
     </div>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
