--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&amp;family=Montserrat:wght@400;500;700&amp;family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/fontawesome.css">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
@@ -47,13 +48,13 @@
             <p class="block-box-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste tempore ducimus aut minima ex. Eaque impedit, quasi sed cumque ex optio accusamus eius, quod obcaecati non delectus eos sequi laborum.</p>
           </div>
           <div class="about-list">	
-            <div class="about-item"> <img class="about-image" src="../images/img-about1.png" alt="">
+            <div class="about-item"> <img class="about-image" src="../images/img-about1.png" alt=""/>
               <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
             </div>
-            <div class="about-item"> <img class="about-image" src="../images/img-about2.png" alt="">
+            <div class="about-item"> <img class="about-image" src="../images/img-about2.png" alt=""/>
               <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
             </div>
-            <div class="about-item"> <img class="about-image" src="../images/img-about3.png" alt="">
+            <div class="about-item"> <img class="about-image" src="../images/img-about3.png" alt=""/>
               <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
             </div>
           </div>
@@ -178,13 +179,25 @@
       </section>
       <section class="quote"> 
         <div class="container"> 
-          <div class="quote-container"><i class="fa fa-angle-left quote-arrow quote-arrow-left"></i>
-            <div class="quote-content">
-              <div class="quote-icon"><img src="../images/img-quote.png"></div>
-              <div class="quote-info"> 
+          <div class="quote-container">
+            <div class="quote-item">
+              <div class="quote-icon"><img src="../images/img-quote.png"/></div>
+              <div class="quote-info">
                 <p class="quote-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloremque a perspiciatis minus pariatur itaque voluptas illum delectus necessitatibus, tempora sapiente nobis cupiditate, ipsum fugiat quos, rem ea enim reiciendis!</p><span class="quote-author">Jon Doe</span>
               </div>
-            </div><i class="fa fa-angle-right quote-arrow quote-arrow-right"></i>
+            </div>
+            <div class="quote-item">
+              <div class="quote-icon"><img src="../images/img-quote.png"/></div>
+              <div class="quote-info">
+                <p class="quote-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloremque a perspiciatis minus pariatur itaque voluptas illum delectus necessitatibus, tempora sapiente nobis cupiditate, ipsum fugiat quos, rem ea enim reiciendis!</p><span class="quote-author">Jon Doe</span>
+              </div>
+            </div>
+            <div class="quote-item">
+              <div class="quote-icon"><img src="../images/img-quote.png"/></div>
+              <div class="quote-info">
+                <p class="quote-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloremque a perspiciatis minus pariatur itaque voluptas illum delectus necessitatibus, tempora sapiente nobis cupiditate, ipsum fugiat quos, rem ea enim reiciendis!</p><span class="quote-author">Jon Doe</span>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -289,6 +302,27 @@
           <div class="work-item"><img class="work-image" src="./images/img-work7.png"/>
             <div class="work-content"> <i class="work-icon fa fa-home"></i>
               <h3 class="work-title">Creatively designed</h3><span class="work-desc text text--light">Lorem ipsum dolor sit</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="quote">
+        <div class="container">
+          <div class="quote-container">
+            <div class="quote-item"><img class="quote-image" src="./images/img-quote-avatar.png"/>
+              <div class="quote-info">
+                <p class="quote-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloremque a perspiciatis minus pariatur itaque voluptas illum delectus necessitatibus, tempora sapiente nobis cupiditate, ipsum fugiat quos, rem ea enim reiciendis!</p><span class="quote-author">Jon Doe</span>
+              </div>
+            </div>
+            <div class="quote-item"><img class="quote-image" src="./images/img-quote-avatar.png"/>
+              <div class="quote-info">
+                <p class="quote-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloremque a perspiciatis minus pariatur itaque voluptas illum delectus necessitatibus, tempora sapiente nobis cupiditate, ipsum fugiat quos, rem ea enim reiciendis!</p><span class="quote-author">Jon Doe</span>
+              </div>
+            </div>
+            <div class="quote-item"><img class="quote-image" src="./images/img-quote-avatar.png"/>
+              <div class="quote-info">
+                <p class="quote-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi doloremque a perspiciatis minus pariatur itaque voluptas illum delectus necessitatibus, tempora sapiente nobis cupiditate, ipsum fugiat quos, rem ea enim reiciendis!</p><span class="quote-author">Jon Doe</span>
+              </div>
             </div>
           </div>
         </div>
@@ -428,6 +462,9 @@
         </div>
       </footer>
     </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./scripts/main.js"></script>
   </body>
 </html>
