--- a/public/index.html
+++ b/public/index.html
@@ -48,14 +48,14 @@
             <p class="block-box-desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste tempore ducimus aut minima ex. Eaque impedit, quasi sed cumque ex optio accusamus eius, quod obcaecati non delectus eos sequi laborum.</p>
           </div>
           <div class="about-list">	
-            <div class="about-item"> <img class="about-image" src="../images/img-about1.png" alt=""/>
-              <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
+            <div class="about-item"><img class="about-image" src="./images/img-about1.png"/>
+              <div class="about-content"><i class="about-icon fa fa-users"></i><span class="about-title">Super Team</span></div>
             </div>
-            <div class="about-item"> <img class="about-image" src="../images/img-about2.png" alt=""/>
-              <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
+            <div class="about-item"><img class="about-image" src="./images/img-about2.png"/>
+              <div class="about-content"><i class="about-icon fa fa-heart"></i><span class="about-title">Super Team</span></div>
             </div>
-            <div class="about-item"> <img class="about-image" src="../images/img-about3.png" alt=""/>
-              <div class="about-content"> <i class="fa fa-users about-icon"></i><span class="about-title">Supper Team</span></div>
+            <div class="about-item"><img class="about-image" src="./images/img-about3.png"/>
+              <div class="about-content"><i class="about-icon fa fa-home"></i><span class="about-title">Super Team</span></div>
             </div>
           </div>
         </div>
